[package]
name = "gerust-assembly"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]

[dependencies]
futures = "0.1.13"
gerust-context = { path = "../gerust-context" }
gerust-routing = { path = "../gerust-routing" }
gerust-router = { path = "../gerust-router" }
gerust-controller = { path = "../gerust-controller" }
gerust-http = { path = "../gerust-http" }